# outertale0

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  todo.md  vcpkg-configuration.json  vcpkg.json  xmake.lua
android/: .gitignore  build.gradle.kts  gradle.properties  log.txt  settings.gradle.kts  vcpkg_android_wrapper.cmake
android/app/: build.gradle  game.keystore
android/app/jni/: CMakeLists.txt  include  src
android/assets/: main.pak
android/libs/: SDL3_mixer-3.1.2.aar
android/src/main/: AndroidManifest.xml
android/src/main/java/org/libsdl/app/: SDLActivity.java
android/src/main/res/values/: strings.xml
app/: .clangd  .clangd-linux  .clangd-windows  generate_android_icon.ps1  index.html
assets/config/: assets.json  default_savefile.json  info.json  typer.json
assets/fnt/: main.fnt
assets/text/: zh_CN.json
assets/text/en/: system.json
assets/text/zh_CN/: system.json
note/: todo.md  typer.md
plugin/gamejolt-api/: xmake.lua
src/: font.cpp  font.hpp  game.cpp  game.hpp  gamecontext.cpp  gamecontext.hpp  main.cpp  mian.cpp  res.cpp  res.hpp  save.hpp  text.cpp  text.hpp  timer.cpp  timer.hpp  utils.cpp  utils.hpp  values.hpp
src/engine/: AudioMgr.cpp  AudioMgr.hpp  E_Font.cpp  E_Font.hpp  E_Game.cpp  E_Game.hpp  E_ResManager.hpp  E_Scene.hpp  E_Types.hpp  FontMgr.cpp  FontMgr.hpp  Game.cpp  Game.hpp  Global.hpp  ImageMgr.cpp  ImageMgr.hpp  SceneMgr.cpp  SceneMgr.hpp  Utils.hpp
src/scene/: S_Init.cpp  S_Init.h  S_Init.hpp  init.cpp  init.hpp  s0.cpp  s0.hpp  scene.hpp
src/type/: Animation.cpp  Animation.hpp  Image.hpp  Object.hpp  Scene.cpp  Scene.hpp  Text.hpp  Timer.cpp  Timer.hpp  audio.cpp  audio.hpp  font.cpp  font.hpp  json.cpp  json.hpp  object.cpp  object.hpp  text.cpp  text.hpp  texture.cpp  texture.hpp
vcpkg/ports/: README
vcpkg/ports/sdl3-mixer/: portfile.cmake  vcpkg.json
vcpkg/triplets/: README
